Fixes header alignment on large screens

--- a/_sass/modules/_header.scss
+++ b/_sass/modules/_header.scss
@@ -27,7 +27,7 @@
             animation-delay: 0.5s;
 
     @include respond-to('large-plus') {
-      line-height: 1.6;
+      line-height: 2.2;
     }
 
     a {
